# isolatedPhotonsAndRecoilJets

./: .gitignore  .gitmodules  AGENTS.md  README.md  checkAvailableVariant  checkCondorQ
.codex/: config.toml
.tmp/: PlotScaledTriggerStudy.C
.tmp_codex/: InspectPoolReplaySmoke.C  MakePoolReplaySmoke.C
.tmp_codex/pool_smoke/: pool.list  pool.root  pool_twice.list  replay.root  replay_twice.root
InputSimFiles_photon10and20_7pi8cut/: RecoilJets_photonjet10_ALL.root
LHC_overlayData/: HEPData-ins1694678-v1-Table_1.csv
OTHERinputFiles/: RecoilJets_photonjet10_ALL_oldBinning_pihalves.root
OTHERinputFiles/pTminJet10/: RecoilJets_photonjet20_ALL_newBinning_7piOver8.root
agent_context/: REFERENCE_MAP.md  STATUS_DASHBOARD.md  TASK_BOARD.md
agent_context/policies/: AGENT_MEMORY_DESIGN_NOTES.md  COLLABORATION_AND_HANDOFFS.md  CURRENT_PROJECT_STATE.md  DUPLICATE_RUN_GUARD.md  EMAIL_AND_WATCHDOGS.md  HARD_STOPS_AND_SAFETY.md  INPUTS_AND_ENVIRONMENT.md  LEGACY_AGENTS_COVERAGE.md  LOAD_MAP.yaml  MEMORY_AND_STATUS.md  PLOTTING.md  README.md  SCIENCE_REFERENCE_HIERARCHY.md  SDCC_OPERATIONS.md  SLIDES_WORKFLOW.md  STORAGE_AND_CLEANUP.md  TOOLS_AND_DEPENDENCIES.md  TRANSFER_AND_PIPELINE_FILES.md
codex_notes/: DATASET_STATUS.md  KNOWN_ISSUES.md  PROJECT_BOARD.md  RUN_LOG.md
dataOutput/auau/: RecoilJets_isAuAu_run00068421_grp005.root
dataOutput/photonJet10_SIM/: RecoilJets_photonjet10_ALL.root  missing_hists.txt  missing_hists_SIM.txt  missing_hists_SIM_TABULATED.txt
dataOutput/photonJet10and20merged_SIM/: missing_hists_SIM.txt  missing_hists_SIM_TABULATED.txt  requested_hists_SIM.txt  unused_hists_SIM.txt
dataOutput/photonJet20_SIM/: RecoilJets_photonjet20_ALL.root  missing_hists_SIM.txt  missing_hists_SIM_TABULATED.txt  requested_hists_SIM.txt
dataOutput/photonJet5_SIM/: RecoilJets_photonjet5_ALL.root  (+3 more)
macros/: AnalyzeRecoilJets.cpp  AnalyzeRecoilJets.h  AnalyzeRecoilJets_RooUnfoldPipeline.cpp  AnalyzeRecoilJets_RunIsoQA_UEComparisons_AuAu.cpp  AnalyzeRecoilJets_RunJES3QA.cpp  AnalyzeRecoilJets_RunTriggerAna.cpp  AnalyzeRecoilJets_SSQA.cpp  AnalyzeRecoilJets_cpp.d  AnalyzeRecoilJets_ppAuAuComparisons.cpp  AnalyzeTriggerGroupings.h  AuditAuAuNPBPool.C  BuildSSQACentralityPtSummariesFast.C  Calo_Calib.C  CompareAuAu3x3IDEfficiency.C  CompareAuAuBoxToNPB.C  ExtractDoNotScaleHistograms.C  Fun4All_auauTightBDTTraining.C  Fun4All_recoilJets.C  Fun4All_recoilJets_AuAu.C  Fun4All_recoilJets_poolReplay.C  Fun4All_recoilJets_unified_impl.C  GenerateYieldOverlayQuick.C  MakeAuAu3x3FeatureSeparation.C  MakeAuAu3x3WidthComparison.C  MakeAuAuReferenceDataEmbeddedVertexCentralityTable.C  MakeAuAuTightBDTValidationSlidePlots.C  MakeCentBinnedAucGainHeatmap.C  MakeCentInputAucGainPlot.C  MakeEmbeddedBLeakageCompare.C  MakeEmbeddedInclusiveMergedStitchSpectrum.C  MakeEmbeddedPhotonEfficiencyCompare.C  MakeEmbeddedPhotonXsecNormQA.C  MakeFocusedPhotonSummaryTables.C  MakeFocusedPhotonUnfoldingQuick.C  MakePPMergedIsoCutFitsQuick.C  MakePPSlidingIsoRDepFits.C  MakePtCentAucGainHeatmap.C  MakeWidthStudy1535AucWinnerPlot.C  MakeWidthStudyBDTComparison.C  MakeWidthStudyCentralityGain.C  (+38 more)
scripts/: MergeDownloadedRecoilJetsSim.C  RecoilJets_Condor.sh  RecoilJets_Condor_AuAu.sh  RecoilJets_Condor_submit.sh  auau_bdt_mlp_stack_production_driver.sh  auau_mlp_bdt_beating_driver.sh  auau_tight_bdt_pipeline.sh  auau_tight_logreg_pipeline.sh  auau_tight_mlp_pipeline.sh  audit_auau_grl_projection.sh  audit_auau_ml_training_smoke.py  audit_auau_single_bdt_sample_stats.py  audit_auau_truth_tags.py  build_auau_model_inventory.py  estimateEmbeddedPhotonXsec.sh  extract_iso_input_score_histograms.py  extract_recoiljets_raw_sim_purity.py  extract_recoiljets_reco_candidate_tight_fraction.py  extract_recoiljets_reco_efficiency.py  makeThesisSimLists.sh  make_auau_bdt_binned_noiso_score_comparison.py  make_auau_bdt_iso_input_comparison_sig_bkg_score_split.py  make_auau_bdt_iso_ptcent7_split_gain_slide_summary.py  make_auau_bdt_mlp_noiso_score_comparison.py  make_auau_bdt_mlp_stack_roc_overlay.py  make_auau_bdt_mlp_stack_score_separation.py  make_auau_bdt_money_plots.py  make_auau_bdt_target_wp_config.py  make_auau_bdt_training_closure.py  make_auau_bdt_wp80_centbin_fit_plots.py  make_auau_best_iso_bdt_sig_bkg_score_split.py  make_auau_binned_bdt_split_gain_breakdown.py  make_auau_final_id_efficiency_overlays.py  make_auau_iso_slide6_current.py  make_auau_iso_visible_diagnostic_summary.py  make_auau_logreg_target_wp_config.py  make_auau_ml_wp80_cent3_fit_plots.py  make_auau_mlp_expert_validation_plots.py  make_auau_mlp_target_wp_config.py  make_auau_mlp_training_curves.py  (+75 more)
src/: Makefile.am  PhotonClusterBuilder.cc  PhotonClusterBuilder.h  RecoilJets.cc  RecoilJets.h
src_AuAu/: Makefile.am  RecoilJets_AuAu.cc  RecoilJets_AuAu.h  configure.ac
(+98 files in other folders)
